# custom_numbers

./: .bumpversion.cfg  CHANGELOG.md  README.md  RELEASE_NOTES.md  inst.sh  pyproject.toml  uninst.sh
conda/: meta.yaml
src/custom_numbers/: __init__.py  custom_numbers.py
tests/: test_custom_numbers.py  test_customnumber.py  test_customnumeralsystem.py  test_geariterator.py
