[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custom_numbers"
version = "0.0.1"
authors = [{ name = "Evgueni Antonov", email = "Evgueni.Antonov@gmail.com" }]
description = "Swiss-army knife for numbers of custom numeral systems."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
license = { file= "LICENSE" }
keywords = ["number", "numbers", "numeral", "counter", "mathematics", "math"]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
